<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp">

    <TextView
        android:id="@+id/title_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/title_ticket"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edit_title_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/border_ticket"
        android:hint="@string/title_ticket"/>
    

    <TextView
        android:id="@+id/description_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/description_ticket"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edit_description_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/border_ticket"
        android:hint="@string/edit_description_ticket"
        android:gravity="start"
        android:minHeight="90dp"/>

    <TextView
        android:id="@+id/priority_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/priority_ticket"
        android:layout_marginTop="20dp"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_ticket">

        <Spinner
            android:id="@+id/priority_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            ></Spinner>

    </LinearLayout>

    <TextView
        android:id="@+id/cc_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/cc_ticket"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/edit_cc_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/border_ticket"
        android:hint="@string/edit_cc_ticket"/>


    <TextView
        android:id="@+id/screenshot_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/screenshot_ticket"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/button_add_screenshot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Upload File"
            android:textAllCaps="false"
            android:textColor="#757575" />

        <TextView
            android:id="@+id/text_add_screenshot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:padding="15dp"
            android:layout_weight="3"/>

    </LinearLayout>
    
    <Button
        android:id="@+id/button_save_issue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_ticket"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>
