<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/racker_layout"
    android:background="@color/list_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:visibility="visible"

            android:layout_marginBottom="@dimen/margin_10"
            android:src="@drawable/ic_new_task"/>

        <TextView
            android:id="@+id/display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/hello_name"
            android:textColor="@color/txt_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/new_racker_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/you_have_been_assigned_a_new_task"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_8"
            android:visibility="gone"
            android:textSize="@dimen/txt_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@color/bg_line"/>

        <TextView
            android:id="@+id/tray_picked_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/txt_color"
            tools:text="@string/go_to_specific_zone"
            android:textSize="@dimen/txt_18" />

    </LinearLayout>

    <Button
        android:id="@+id/self_assignment"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="16dp"
        android:text="@string/start_self_assignment"
        android:textSize="16sp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:theme="@style/ThemeOverlay.GreenButton" />

</RelativeLayout>